--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,18 +1,18 @@
 Type: Package
-Package: templateB3
-Title: What the Package Does (Title Case)
+Package: dissmapr
+Title: Workflow for Compositional Dissimilarity and Biodiversity Turnover Analysis
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line) Use four
-    spaces when indenting paragraphs within the Description.
+Authors@R: 
+  person("Sandra", "MacFadyen", email = "macfadyen@sun.ac.za", role = c("aut", "cre"))
+Description: Tools to compute and map biodiversity turnover at the macroscale.
 License: MIT + file LICENSE
-URL: https://github.com/yourname/templateB3, https://macsands.github.io/templateB3, https://macsands.github.io/templateB3/
-BugReports: https://github.com/macSands/templateB3/issues
+URL: https://github.com/macSands/dissmapr, https://macsands.github.io/dissmapr/
+BugReports: https://github.com/macSands/dissmapr/issues
 Suggests: 
     knitr,
     rmarkdown,
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    pkgdown
 Imports: 
     data.table,
     dplyr,
@@ -21,10 +21,14 @@ Imports:
     geodata,
     sf,
     terra,
-    zoo
+    zoo,
+    zetadiv,
+    ggplot2,
+    viridis
 VignetteBuilder: 
     knitr
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
+Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
