--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,30 +4,66 @@ export(abund)
 export(assign_mapsheet)
 export(calculate_pairwise_distances_matrix)
 export(calculate_pairwise_gower_dist_matrix)
+export(compute_orderwise)
 export(cor_pears)
 export(cor_spear)
 export(diss_bcurt)
 export(distance)
 export(format_df)
 export(generate_grid)
+export(geodist_helper)
 export(get_enviro_data)
 export(get_occurrence_data)
 export(gower_dissimilarity)
 export(hello)
+export(map_bioreg)
+export(map_bioregDiff)
 export(mutual_info)
 export(phi_coef)
 export(predict_dissim)
 export(richness)
 export(rm_correlated)
 export(turnover)
+import(cluster)
 import(data.table)
 import(dplyr)
+import(future.apply)
 import(geodata)
+import(pbapply)
+import(reshape2)
 import(sf)
 import(terra)
 import(zoo)
+importFrom(NbClust,NbClust)
 importFrom(cluster,daisy)
+importFrom(cluster,pam)
+importFrom(data.table,as.data.table)
+importFrom(data.table,rbindlist)
 importFrom(entropy,mi.plugin)
+importFrom(factoextra,hcut)
+importFrom(fields,Tps)
 importFrom(geosphere,distHaversine)
+importFrom(ggplot2,geom_tile)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,labs)
+importFrom(ggplot2,scale_fill_brewer)
+importFrom(ggplot2,theme_minimal)
+importFrom(mclust,Mclust)
+importFrom(patchwork,wrap_plots)
+importFrom(purrr,reduce)
 importFrom(reshape2,melt)
+importFrom(sf,st_as_sf)
+importFrom(sf,st_coordinates)
+importFrom(stats,aggregate)
+importFrom(stats,dist)
+importFrom(stats,kmeans)
+importFrom(terra,app)
+importFrom(terra,classify)
+importFrom(terra,crds)
+importFrom(terra,interpolate)
+importFrom(terra,mask)
+importFrom(terra,nlyr)
+importFrom(terra,rast)
+importFrom(terra,values)
+importFrom(terra,vect)
 importFrom(vegan,vegdist)
