--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(hello)
 export(map_bioreg)
 export(map_bioregDiff)
 export(mutual_info)
+export(orderwise_diss_gower)
 export(phi_coef)
 export(predict_dissim)
 export(richness)
