--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,46 +25,26 @@ export(predict_dissim)
 export(richness)
 export(rm_correlated)
 export(turnover)
-import(cluster)
-import(data.table)
+import(NbClust)
+import(clValid)
 import(dplyr)
-import(future.apply)
+import(fields)
 import(geodata)
-import(pbapply)
-import(reshape2)
+import(ggplot2)
+import(mclust)
+import(patchwork)
 import(sf)
 import(terra)
 import(zoo)
-importFrom(NbClust,NbClust)
 importFrom(cluster,daisy)
 importFrom(cluster,pam)
 importFrom(data.table,as.data.table)
 importFrom(data.table,rbindlist)
 importFrom(entropy,mi.plugin)
 importFrom(factoextra,hcut)
-importFrom(fields,Tps)
 importFrom(geosphere,distHaversine)
-importFrom(ggplot2,geom_tile)
-importFrom(ggplot2,ggplot)
-importFrom(ggplot2,labs)
-importFrom(ggplot2,scale_fill_brewer)
-importFrom(ggplot2,theme_minimal)
-importFrom(mclust,Mclust)
-importFrom(patchwork,wrap_plots)
 importFrom(purrr,reduce)
 importFrom(reshape2,melt)
-importFrom(sf,st_as_sf)
-importFrom(sf,st_coordinates)
-importFrom(stats,aggregate)
 importFrom(stats,dist)
 importFrom(stats,kmeans)
-importFrom(terra,app)
-importFrom(terra,classify)
-importFrom(terra,crds)
-importFrom(terra,interpolate)
-importFrom(terra,mask)
-importFrom(terra,nlyr)
-importFrom(terra,rast)
-importFrom(terra,values)
-importFrom(terra,vect)
 importFrom(vegan,vegdist)
