--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,24 +27,24 @@ export(rm_correlated)
 export(turnover)
 import(NbClust)
 import(clValid)
+import(cluster)
 import(dplyr)
 import(fields)
 import(geodata)
 import(ggplot2)
 import(mclust)
 import(patchwork)
+import(purrr)
 import(sf)
 import(terra)
+import(vegan)
 import(zoo)
 importFrom(cluster,daisy)
-importFrom(cluster,pam)
 importFrom(data.table,as.data.table)
 importFrom(data.table,rbindlist)
 importFrom(entropy,mi.plugin)
 importFrom(factoextra,hcut)
 importFrom(geosphere,distHaversine)
-importFrom(purrr,reduce)
 importFrom(reshape2,melt)
 importFrom(stats,dist)
 importFrom(stats,kmeans)
-importFrom(vegan,vegdist)
