--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,32 +16,33 @@ Suggests:
   rmarkdown,
   testthat (>= 3.0.0)
 Imports:
-  caret,
-  clValid,
-  cluster,
-  corrplot,
-  data.table,
-  dplyr,
-  entropy,
-  factoextra,
-  fields,
-  geodata,
-  geosphere,
-  ggplot2,
-  httr,
-  mclust,
-  NbClust,
-  patchwork,
-  pbapply,
-  purrr,
-  reshape2,
-  sf,
-  terra,
-  tidyr,
-  vegan,
-  viridis,
-  zetadiv,
-  zoo
+    pbapply,
+    data.table,
+    future,
+    geosphere,
+    cluster,
+    dplyr,
+    tidyr,
+    sf,
+    terra,
+    geodata,
+    zoo,
+    httr,
+    NbClust,
+    factoextra,
+    fields,
+    mclust,
+    ggplot2,
+    purrr,
+    vegan,
+    entropy,
+    caret,
+    corrplot,
+    reshape2,
+    viridis,
+    patchwork,
+    zetadiv,
+    rlang
 VignetteBuilder: 
     knitr
 Config/testthat/edition: 3
