--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,8 @@ Suggests:
   pkgdown,
   remotes,
   rmarkdown,
-  testthat (>= 3.0.0)
+  testthat (>= 3.0.0),
+  rcmdcheck
 Imports:
     pbapply,
     data.table,
@@ -42,7 +43,8 @@ Imports:
     viridis,
     patchwork,
     zetadiv,
-    rlang
+    rlang,
+    clValid
 VignetteBuilder: 
     knitr
 Config/testthat/edition: 3
