--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,42 +9,42 @@ License: MIT + file LICENSE
 URL: https://github.com/macSands/dissmapr, https://macsands.github.io/dissmapr/
 BugReports: https://github.com/macSands/dissmapr/issues
 Suggests:
-  devtools,
-  knitr,
-  pkgdown,
-  remotes,
-  rmarkdown,
-  testthat (>= 3.0.0)
+    devtools,
+    knitr,
+    pkgdown,
+    remotes,
+    rmarkdown,
+    testthat (>= 3.0.0)
 Imports:
-    pbapply,
-    data.table,
-    future,
-    geosphere,
+    caret,
     cluster,
+    clValid,
+    corrplot,
+    data.table,
     dplyr,
-    tidyr,
-    sf,
-    terra,
-    geodata,
-    zoo,
-    httr,
-    NbClust,
+    entropy,
     factoextra,
     fields,
-    mclust,
+    future,
+    geodata,
+    geosphere,
     ggplot2,
-    purrr,
-    vegan,
-    entropy,
-    caret,
-    corrplot,
-    reshape2,
-    viridis,
+    httr,
+    mclust,
+    NbClust,
     patchwork,
-    zetadiv,
+    pbapply,
+    purrr,
+    rcmdcheck,
     rlang,
-    clValid,
-    rcmdcheck
+    reshape2,
+    sf,
+    terra,
+    tidyr,
+    vegan,
+    viridis,
+    zoo,
+    zetadiv
 VignetteBuilder: 
     knitr
 Config/testthat/edition: 3
