--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,10 +41,18 @@ import(vegan)
 import(zoo)
 importFrom(cluster,daisy)
 importFrom(data.table,as.data.table)
+importFrom(data.table,fread)
 importFrom(data.table,rbindlist)
+importFrom(dplyr,left_join)
+importFrom(dplyr,mutate)
+importFrom(dplyr,rename)
 importFrom(entropy,mi.plugin)
 importFrom(factoextra,hcut)
 importFrom(geosphere,distHaversine)
+importFrom(httr,GET)
+importFrom(httr,write_disk)
 importFrom(reshape2,melt)
 importFrom(stats,dist)
 importFrom(stats,kmeans)
+importFrom(tidyr,pivot_longer)
+importFrom(utils,unzip)
