--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -4,7 +4,7 @@ name: R-CMD-check
 
 on:
   push:
-    branches: [ main, master ]
+    branches: [main, master]
   pull_request:
 
 permissions:
@@ -13,23 +13,25 @@ permissions:
 jobs:
   R-CMD-check:
     runs-on: ubuntu-latest
+
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
-      R_KEEP_PKG_SOURCE: yes
+      R_KEEP_PKG_SOURCE: yes       # keep sources for reproducibility
 
     steps:
-      # 1. Get your code
+      # 1 ── Get the code ---------------------------------------------------
       - uses: actions/checkout@v4
 
-      # 2. Install R
+      # 2 ── Install R and system libs -------------------------------------
       - uses: r-lib/actions/setup-r@v2
         with:
-          use-public-rspm: true
+          use-public-rspm: true      # binary packages → faster CI
 
-      # 4. Run build & check using the restored environment
+      # 3 ── Restore the renv library (+ cache) ----------------------------
+      - uses: r-lib/actions/setup-renv@v2   # replaces the old `use_renv:` input
+
+      # 4 ── Run R CMD check -----------------------------------------------
       - uses: r-lib/actions/check-r-package@v2
         with:
-          # leave out `use_renv: false` so it *does* use renv
-          use_renv: false
-          upload-snapshots: true
-          build_args: 'c("--no-manual","--compact-vignettes=gs+qpdf")'
+          build_args: '--no-manual --compact-vignettes=gs+qpdf'
+          upload-snapshots: true      # upload {testthat} Snapshots
