--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -45,5 +45,6 @@ jobs:
       # 5 ── Run R CMD check -------------------------------------------------
       - uses: r-lib/actions/check-r-package@v2
         with:
-          build_args: '--no-manual --compact-vignettes=gs+qpdf'
+          # build_args: '--no-manual --compact-vignettes=gs+qpdf'
+          build_args: '--no-manual --compact-vignettes=qpdf'
           upload-snapshots: true
