--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -28,9 +28,9 @@ jobs:
         with:
           use-public-rspm: true   # binary CRAN packages = faster
 
-      # 3 ── Spatial system libraries ---------------------------------------
+      # 3 ── System and Spatial libraries ---------------------------------------
       #     terra / sf / stars / raster, etc. need PROJ, GDAL, GEOS, udunits2
-      - name: Install geospatial system requirements
+      - name: Install system and geospatial requirements
         run: |
           sudo apt-get update -y
           sudo apt-get install -y \
@@ -38,6 +38,13 @@ jobs:
             libgdal-dev gdal-bin \
             libgeos-dev \
             libudunits2-dev
+            ghostscript qpdf
+
+          # ---- sanity-check ---------------------------------------------------
+          which gs    || { echo 'gs not found'; exit 1; }
+          gs --version
+          which qpdf  || { echo 'qpdf not found'; exit 1; }
+          qpdf --version
 
       # 4 ── Restore and cache the renv library -----------------------------
       - uses: r-lib/actions/setup-renv@v2   # installs renv + renv::restore()
@@ -45,7 +52,7 @@ jobs:
       # 5 ── Run R CMD check -------------------------------------------------
       - uses: r-lib/actions/check-r-package@v2
         with:
-          # build_args: '--no-manual --compact-vignettes=gs+qpdf'
+          build_args: '--no-manual --compact-vignettes=gs+qpdf'
           # build_args: '--no-manual --compact-vignettes=qpdf'
-          build_args: '--no-manual --no-build-vignettes'   # or simply omit build_args
+          # build_args: '--no-manual --no-build-vignettes'   # or simply omit build_args
           upload-snapshots: true
