--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -17,7 +17,7 @@ jobs:
 
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
-      R_KEEP_PKG_SOURCE: yes
+      R_KEEP_PKG_SOURCE: yes         # keep sources for reproducibility
 
     steps:
       # 1 ── Get the code ---------------------------------------------------
@@ -26,33 +26,29 @@ jobs:
       # 2 ── Install R -------------------------------------------------------
       - uses: r-lib/actions/setup-r@v2
         with:
-          use-public-rspm: true   # binary CRAN packages = faster
+          use-public-rspm: true       # binary CRAN packages = faster
 
-      # 3 ── System and Spatial libraries ---------------------------------------
-      #     terra / sf / stars / raster, etc. need PROJ, GDAL, GEOS, udunits2
-      - name: Install system and geospatial requirements
+      # 3 ── System + spatial + PDF tools -----------------------------------
+      - name: Install system requirements
         run: |
           sudo apt-get update -y
           sudo apt-get install -y \
             libproj-dev proj-data proj-bin \
             libgdal-dev gdal-bin \
             libgeos-dev \
-            libudunits2-dev
-            ghostscript qpdf
+            libudunits2-dev \
+            ghostscript \
+            qpdf
 
-          # ---- sanity-check ---------------------------------------------------
+          # ---- sanity-check -----------------------------------------------
           which gs    || { echo 'gs not found'; exit 1; }
-          gs --version
           which qpdf  || { echo 'qpdf not found'; exit 1; }
-          qpdf --version
 
       # 4 ── Restore and cache the renv library -----------------------------
-      - uses: r-lib/actions/setup-renv@v2   # installs renv + renv::restore()
+      - uses: r-lib/actions/setup-renv@v2      # installs renv + renv::restore()
 
       # 5 ── Run R CMD check -------------------------------------------------
       - uses: r-lib/actions/check-r-package@v2
         with:
-          build_args: '--no-manual --compact-vignettes=gs+qpdf'
-          # build_args: '--no-manual --compact-vignettes=qpdf'
-          # build_args: '--no-manual --no-build-vignettes'   # or simply omit build_args
+          build_args: 'c("--no-manual", "--compact-vignettes=gs+qpdf")'
           upload-snapshots: true
