--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,20 +39,91 @@ import(sf)
 import(terra)
 import(vegan)
 import(zoo)
+importFrom(NbClust,NbClust)
+importFrom(caret,findCorrelation)
+importFrom(clValid,clValid)
 importFrom(cluster,daisy)
+importFrom(cluster,pam)
+importFrom(data.table,":=")
 importFrom(data.table,as.data.table)
 importFrom(data.table,fread)
 importFrom(data.table,rbindlist)
+importFrom(dplyr,across)
+importFrom(dplyr,all_of)
+importFrom(dplyr,any_of)
+importFrom(dplyr,bind_cols)
+importFrom(dplyr,cur_group_id)
+importFrom(dplyr,filter)
+importFrom(dplyr,group_by)
+importFrom(dplyr,intersect)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
+importFrom(dplyr,relocate)
 importFrom(dplyr,rename)
+importFrom(dplyr,row_number)
+importFrom(dplyr,select)
+importFrom(dplyr,slice)
+importFrom(dplyr,summarize)
+importFrom(dplyr,ungroup)
+importFrom(dplyr,union)
 importFrom(entropy,mi.plugin)
 importFrom(factoextra,hcut)
+importFrom(fields,Tps)
+importFrom(future,plan)
+importFrom(geodata,worldclim_global)
+importFrom(geosphere,distGeo)
 importFrom(geosphere,distHaversine)
+importFrom(geosphere,distm)
+importFrom(ggplot2,element_blank)
+importFrom(ggplot2,geom_text)
+importFrom(ggplot2,geom_tile)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,labs)
+importFrom(ggplot2,scale_fill_gradientn)
+importFrom(ggplot2,theme)
+importFrom(ggplot2,theme_minimal)
+importFrom(grDevices,colorRampPalette)
 importFrom(httr,GET)
 importFrom(httr,write_disk)
+importFrom(mclust,Mclust)
+importFrom(pbapply,pblapply)
+importFrom(purrr,reduce)
 importFrom(reshape2,melt)
+importFrom(sf,st_as_sf)
+importFrom(sf,st_as_sfc)
+importFrom(sf,st_bbox)
+importFrom(sf,st_buffer)
+importFrom(sf,st_centroid)
+importFrom(sf,st_convex_hull)
+importFrom(sf,st_coordinates)
+importFrom(sf,st_join)
+importFrom(sf,st_make_grid)
+importFrom(sf,st_set_geometry)
+importFrom(sf,st_union)
+importFrom(sf,st_within)
+importFrom(stats,aggregate)
+importFrom(stats,cor)
 importFrom(stats,dist)
 importFrom(stats,kmeans)
+importFrom(terra,area)
+importFrom(terra,classify)
+importFrom(terra,crds)
+importFrom(terra,describe)
+importFrom(terra,ext)
+importFrom(terra,interpolate)
+importFrom(terra,intersect)
+importFrom(terra,rast)
+importFrom(terra,rasterize)
+importFrom(terra,union)
+importFrom(terra,vect)
 importFrom(tidyr,pivot_longer)
+importFrom(tidyr,pivot_wider)
+importFrom(utils,combn)
+importFrom(utils,read.csv)
 importFrom(utils,unzip)
+importFrom(vegan,vegdist)
+importFrom(zetadiv,Ispline)
+importFrom(zetadiv,Predict.msgdm)
+importFrom(zetadiv,Zeta.msgdm)
+importFrom(zoo,"time<-")
+importFrom(zoo,na.approx)
