--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -1,5 +1,6 @@
 # .github/workflows/R-CMD-check.yaml
 # -------------------------------------------------------------------------
+
 name: R-CMD-check
 
 on:
@@ -17,6 +18,7 @@ jobs:
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
       R_KEEP_PKG_SOURCE: yes
+      _R_CHECK_FORCE_SUGGESTS_: true      # insist that Suggests are installed
 
     steps:
       # 1 ── Get the code ---------------------------------------------------
@@ -25,7 +27,7 @@ jobs:
       # 2 ── Install R -------------------------------------------------------
       - uses: r-lib/actions/setup-r@v2
         with:
-          use-public-rspm: false          # ← turn the broken mirror off
+          use-public-rspm: false          # CRAN mirror; avoids broken “noble” URL
 
       # 3 ── System + spatial + PDF tools -----------------------------------
       - name: Install system requirements
@@ -38,22 +40,26 @@ jobs:
             libudunits2-dev \
             ghostscript \
             qpdf
-          which qpdf || { echo 'qpdf not found'; exit 1; }
-          which gs   || { echo 'gs not found';  exit 1; }
+          which gs   && gs   --version
+          which qpdf && qpdf --version
 
-      # 4 ── Pandoc (for vignettes) -----------------------------------------
+      # 4 ── Pandoc (needed for vignettes) ----------------------------------
       - uses: r-lib/actions/setup-pandoc@v2
 
-      # 5 ── Restore renv & install *all* deps ------------------------------
+      # 5 ── Cache & restore renv ------------------------------------------
       - uses: r-lib/actions/setup-renv@v2
 
-      # 6 ── Run R CMD check ------------------------------------------------
+      # 6 ── Install Suggests used at check-time ----------------------------
+      - uses: r-lib/actions/setup-r-dependencies@v2
+        with:
+          packages: |
+            devtools
+            pkgdown
+            remotes
+            testthat
+
+      # 7 ── Run R CMD check ------------------------------------------------
       - uses: r-lib/actions/check-r-package@v2
         with:
           build_args: '--no-manual --compact-vignettes=gs+qpdf'
           upload-snapshots: true
-          extra-packages: |
-            testthat
-            devtools
-            pkgdown
-            remotes
