--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -1,6 +1,3 @@
-# .github/workflows/R-CMD-check.yaml
-# -------------------------------------------------------------------------
-
 name: R-CMD-check
 
 on:
@@ -18,7 +15,7 @@ jobs:
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
       R_KEEP_PKG_SOURCE: yes
-      _R_CHECK_FORCE_SUGGESTS_: true      # insist that Suggests are installed
+      _R_CHECK_FORCE_SUGGESTS_: "true"
 
     steps:
       # 1 ── Get the code ---------------------------------------------------
@@ -27,7 +24,7 @@ jobs:
       # 2 ── Install R -------------------------------------------------------
       - uses: r-lib/actions/setup-r@v2
         with:
-          use-public-rspm: false          # CRAN mirror; avoids broken “noble” URL
+          use-public-rspm: false          # avoids broken Ubuntu mirror
 
       # 3 ── System + spatial + PDF tools -----------------------------------
       - name: Install system requirements
@@ -43,8 +40,8 @@ jobs:
           which gs   && gs   --version
           which qpdf && qpdf --version
 
-# 4 ── Pandoc (needed for vignettes) ----------------------------------
-- uses: r-lib/actions/setup-pandoc@v2
+      # 4 ── Pandoc (needed for vignettes) ----------------------------------
+      - uses: r-lib/actions/setup-pandoc@v2
 
       # 5 ── Cache & restore renv ------------------------------------------
       - uses: r-lib/actions/setup-renv@v2
@@ -58,8 +55,8 @@ jobs:
             remotes
             testthat
 
-# 7 ── Run R CMD check ------------------------------------------------
-- uses: r-lib/actions/check-r-package@v2
+      # 7 ── Run R CMD check ------------------------------------------------
+      - uses: r-lib/actions/check-r-package@v2
         with:
-          build_args: 'c("--no-manual", "--compact-vignettes=gs+qpdf")'
+          build-args: 'c("--no-manual", "--compact-vignettes=gs+qpdf")'
           upload-snapshots: true
