--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -59,5 +59,5 @@ jobs:
 # 7 ── Run R CMD check ------------------------------------------------
       - uses: r-lib/actions/check-r-package@v2
         with:
-          build_args: '--no-manual --compact-vignettes=gs+qpdf'
+          build_args: 'c("--no-manual", "--compact-vignettes=gs+qpdf")'
           upload-snapshots: true
