--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,14 +25,8 @@ export(predict_dissim)
 export(richness)
 export(rm_correlated)
 export(turnover)
-import(NbClust)
-import(clValid)
-import(cluster)
 import(dplyr)
-import(fields)
 import(geodata)
-import(ggplot2)
-import(mclust)
 import(patchwork)
 import(purrr)
 import(sf)
@@ -44,10 +38,12 @@ importFrom(caret,findCorrelation)
 importFrom(clValid,clValid)
 importFrom(cluster,daisy)
 importFrom(cluster,pam)
+importFrom(corrplot,corrplot)
 importFrom(data.table,":=")
 importFrom(data.table,as.data.table)
 importFrom(data.table,fread)
 importFrom(data.table,rbindlist)
+importFrom(dplyr,"%>%")
 importFrom(dplyr,across)
 importFrom(dplyr,all_of)
 importFrom(dplyr,any_of)
@@ -63,22 +59,27 @@ importFrom(dplyr,rename)
 importFrom(dplyr,row_number)
 importFrom(dplyr,select)
 importFrom(dplyr,slice)
+importFrom(dplyr,summarise)
 importFrom(dplyr,summarize)
 importFrom(dplyr,ungroup)
 importFrom(dplyr,union)
 importFrom(entropy,mi.plugin)
 importFrom(factoextra,hcut)
 importFrom(fields,Tps)
+importFrom(future,multisession)
 importFrom(future,plan)
+importFrom(future,sequential)
 importFrom(geodata,worldclim_global)
 importFrom(geosphere,distGeo)
 importFrom(geosphere,distHaversine)
 importFrom(geosphere,distm)
+importFrom(ggplot2,aes_string)
 importFrom(ggplot2,element_blank)
 importFrom(ggplot2,geom_text)
 importFrom(ggplot2,geom_tile)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,labs)
+importFrom(ggplot2,scale_fill_brewer)
 importFrom(ggplot2,scale_fill_gradientn)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_minimal)
@@ -89,6 +90,7 @@ importFrom(mclust,Mclust)
 importFrom(pbapply,pblapply)
 importFrom(purrr,reduce)
 importFrom(reshape2,melt)
+importFrom(rlang,sym)
 importFrom(sf,st_as_sf)
 importFrom(sf,st_as_sfc)
 importFrom(sf,st_bbox)
@@ -105,9 +107,11 @@ importFrom(stats,aggregate)
 importFrom(stats,cor)
 importFrom(stats,dist)
 importFrom(stats,kmeans)
+importFrom(stats,setNames)
 importFrom(terra,area)
 importFrom(terra,classify)
 importFrom(terra,crds)
+importFrom(terra,crs)
 importFrom(terra,describe)
 importFrom(terra,ext)
 importFrom(terra,interpolate)
