--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -2,8 +2,8 @@ pandoc: 3.1.1
 pkgdown: 2.1.2
 pkgdown_sha: ~
 articles:
-  getting-started: getting-started.html
-last_built: 2025-06-02T11:53Z
+  tutorial_1: tutorial_1.html
+last_built: 2025-06-02T14:08Z
 urls:
   reference: https://macsands.github.io/dissmapr/reference
   article: https://macsands.github.io/dissmapr/articles
